kobichart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aks-helloworld-one-test
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: aks-helloworld-one-test
